<resources>
    <string name="app_name">Dugarolo</string>
    <string name="irrigation_scheduling">Irrigation Requests</string>
    <string name="request">Request:</string>
    <string name="select_status">Select status:</string>
    <string name="satisfied_request">Satisfied</string>
    <string name="cancelled_request">Cancelled</string>
    <string name="interrupted_request">Interrupted</string>
    <string name="submit_button">SUBMIT</string>
    <string name="expand_button">EXPAND</string>
    <string name="resize_button">RESIZE</string>
    <string name="my_location">MY LOCATION</string>
    <string name="update_weir_open_level">UPDATE OPEN LEVEL</string>
    <string name="accepted_request">Accepted</string>
    <string name="ongoing_request">Ongoing</string>
    <string name="scheduled_request">Scheduled</string>
    <string name="cancelled_request_reason">Why was the request cancelled?</string>
    <string name="reason_hint">Insert reason here</string>
    <string name="request_cancelled_message">The request has been cancelled.</string>
    <string name="request_satisfied_message">The request has been satisified.</string>
    <string name="current_status">Current status</string>
    <string name="request_statuses">Request statuses</string>
    <string name="show_statuses_key">Show statuses key</string>
    <string name="measurement_unit_meaning">m: Meters</string>
    <string name="measurement_unit">m</string>
    <string name="message_label">Message</string>
    <string name="no_message">No message to display</string>
    <string name="open_level_is">Open level is</string>
    <string name="weir">Weir</string>
    <string name="total_irrigation_time">Total time</string>
    <string name="expected_time">Hour</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="hint_irrigation_time">Insert irrigation time here</string>
    <string name="hint_start_date">Select start date by clicking here</string>
    <string name="hint_end_date">Select end date by clicking here</string>
    <string name="tab_text_1">Today</string>
    <string name="tab_text_2">Tomorrow</string>
    <string name="tab_History">History</string>
    <string name="order_title">Order by:</string>
    <string name="filter_title">Filter by:</string>
    <string name="radio_order_1">Time</string>
    <string name="radio_order_2">Canals</string>
    <string name="radio_order_3">Status</string>
    <string name="status">Status</string>
    <string name="type">Type</string>
    <string name="canal">Canals</string>

    <string name="no_request">No requests available at the moment</string>

    <string name="Type_1">CBEC</string>
    <string name="Type_2">CRITERIA</string>


    <string name="order_selected">Order selected:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
