<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RequestDetailsActivity">

    <TextView
        android:id="@+id/request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="51dp"
        android:text="@string/request"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/farm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/request"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/selectStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/select_status"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/request" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectStatus"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/satisfied"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/satisfied_request">
        </RadioButton>

        <RadioButton
            android:id="@+id/cancelled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelled_request">
        </RadioButton>

        <RadioButton
            android:id="@+id/interrupted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interrupted_request">
        </RadioButton>

    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>