<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="280dp"
    android:layout_height="240dp"
    android:elevation="3dp"
    app:layout_constraintCircleRadius="10dp">


    <TextView
        android:id="@+id/orderTitle"
        android:layout_width="233dp"
        android:layout_height="27dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/order_title"
        android:textColor="@color/colorFarmName"
        android:textColorLink="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioOrderGroup"
        android:layout_width="121dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:checkedButton="@+id/radioButtonOrder1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderTitle">

        <RadioButton
            android:id="@+id/radioButtonOrder1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/radio_order_1"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButtonOrder3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/radio_order_2"
            android:textSize="20dp" />

        <RadioButton
            android:id="@+id/radioButtonOrder2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/radio_order_3"
            android:textSize="20dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/negativeOrderButton"
        android:layout_width="200px"
        android:layout_height="100px"
        android:layout_marginStart="88dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="CANCEL"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/positiveOrderButton"
        android:layout_width="100px"
        android:layout_height="100px"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="OK"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/negativeOrderButton" />


</androidx.constraintlayout.widget.ConstraintLayout>