<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="240dp"
    android:layout_height="220dp"
    android:elevation="15dp"
    app:layout_constraintCircleRadius="10dp">


    <TextView
        android:id="@+id/filterTitle"
        android:layout_width="233dp"
        android:layout_height="27dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/filter_title"
        android:textColor="@color/colorFarmName"
        android:textColorLink="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioFilterGroup1"
        android:layout_width="121dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:checkedButton="@+id/radioButtonFilter1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.224"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterTitle">

        <RadioButton
            android:id="@+id/filterAcceptedStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/accepted_request"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/filterInterruptedStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/interrupted_request"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/filterOnGoingStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/ongoing_request"
            android:textSize="16sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/negativeFilterButton1"
        android:layout_width="200px"
        android:layout_height="100px"
        android:gravity="center"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="16dp"
        android:text="CANCEL"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/positiveFilterButton1"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/positiveFilterButton1"
        android:layout_width="100px"
        android:layout_height="100px"
        android:gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="OK"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/negativeFilterButton1" />


</androidx.constraintlayout.widget.ConstraintLayout>