<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="310dp"
    android:layout_height="260dp"
    android:elevation="15dp"
    app:layout_constraintCircleRadius="10dp">


    <TextView
        android:id="@+id/filterTitle"
        android:layout_width="100dp"
        android:layout_height="27dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/filter_title"
        android:textColor="@color/colorFarmName"
        android:textColorLink="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/negativeFilterButton"
        android:layout_width="200px"
        android:layout_height="100px"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="CANCEL"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/positiveFilterButton"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/positiveFilterButton"
        android:layout_width="100px"
        android:layout_height="100px"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="OK"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/negativeFilterButton" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterTitle" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/canal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Spinner
        android:id="@+id/spinner_status"
        android:layout_width="140dp"
        android:layout_height="28dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/filterTitle" />

    <Spinner
        android:id="@+id/spinner_type"
        android:layout_width="140dp"
        android:layout_height="28dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/spinner_status" />

    <Spinner
        android:id="@+id/spinner_canals"
        android:layout_width="140dp"
        android:layout_height="28dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/spinner_type" />

    <TextView
        android:id="@+id/Totalrequests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="Total Requests:"
        app:layout_constraintStart_toEndOf="@+id/filterTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/totRequests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="28dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>